syntax = "proto3";

package sharehodl.governance.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "sharehodl/governance/v1/governance.proto";

option go_package = "github.com/sharehodl/sharehodl-blockchain/api/sharehodl/governance/v1";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // SubmitProposal submits a governance proposal
  rpc SubmitProposal(MsgSubmitProposal) returns (MsgSubmitProposalResponse);
  
  // Vote votes on a governance proposal
  rpc Vote(MsgVote) returns (MsgVoteResponse);
  
  // VoteWeighted votes on a governance proposal with weighted options
  rpc VoteWeighted(MsgVoteWeighted) returns (MsgVoteWeightedResponse);
  
  // Deposit deposits tokens to a proposal
  rpc Deposit(MsgDeposit) returns (MsgDepositResponse);
  
  // CancelProposal cancels a proposal
  rpc CancelProposal(MsgCancelProposal) returns (MsgCancelProposalResponse);
}

// MsgSubmitProposal defines a message to submit a governance proposal
message MsgSubmitProposal {
  option (cosmos.msg.v1.signer) = "proposer";
  option (amino.name) = "sharehodl/governance/MsgSubmitProposal";

  string proposer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  ProposalType proposal_type = 2;
  string title = 3;
  string description = 4;
  repeated cosmos.base.v1beta1.Coin initial_deposit = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  google.protobuf.Duration voting_period = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  google.protobuf.Any content = 7;
  bool expedited = 8;
}

// MsgSubmitProposalResponse defines the response structure for executing a MsgSubmitProposal message
message MsgSubmitProposalResponse {
  uint64 proposal_id = 1;
  ProposalStatus status = 2;
}

// MsgVote defines a message to vote on a governance proposal
message MsgVote {
  option (cosmos.msg.v1.signer) = "voter";
  option (amino.name) = "sharehodl/governance/MsgVote";

  string voter = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 proposal_id = 2;
  VoteOption option = 3;
}

// MsgVoteResponse defines the response structure for executing a MsgVote message
message MsgVoteResponse {
  uint64 proposal_id = 1;
  VoteOption option = 2;
  string voting_power = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgVoteWeighted defines a message to vote on a governance proposal with weighted options
message MsgVoteWeighted {
  option (cosmos.msg.v1.signer) = "voter";
  option (amino.name) = "sharehodl/governance/MsgVoteWeighted";

  string voter = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 proposal_id = 2;
  repeated WeightedVoteOption options = 3 [(gogoproto.nullable) = false];
}

// MsgVoteWeightedResponse defines the response structure for executing a MsgVoteWeighted message
message MsgVoteWeightedResponse {
  uint64 proposal_id = 1;
  repeated WeightedVoteOption options = 2 [(gogoproto.nullable) = false];
  string voting_power = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgDeposit defines a message to deposit tokens to a proposal
message MsgDeposit {
  option (cosmos.msg.v1.signer) = "depositor";
  option (amino.name) = "sharehodl/governance/MsgDeposit";

  string depositor = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 proposal_id = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// MsgDepositResponse defines the response structure for executing a MsgDeposit message
message MsgDepositResponse {
  uint64 proposal_id = 1;
  repeated cosmos.base.v1beta1.Coin deposited_amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  repeated cosmos.base.v1beta1.Coin total_deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// MsgCancelProposal defines a message to cancel a governance proposal
message MsgCancelProposal {
  option (cosmos.msg.v1.signer) = "proposer";
  option (amino.name) = "sharehodl/governance/MsgCancelProposal";

  string proposer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 proposal_id = 2;
}

// MsgCancelProposalResponse defines the response structure for executing a MsgCancelProposal message
message MsgCancelProposalResponse {
  uint64 proposal_id = 1;
  ProposalStatus status = 2;
  repeated cosmos.base.v1beta1.Coin cancelled_deposit = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}